--- a/1.EMC之辐射发射测试.md
+++ b/1.EMC之辐射发射测试.md
@@ -276,11 +276,11 @@
   天线用来接收骚扰电磁场，把场强转变成电压，骚扰测量仪测量的是转变后的电压值，所以测量仪的读数只有加上天线系数后才能得到骚扰场强，如果连接天线和测量仪的同轴电缆有损耗，则还应加上损耗值，即       
   骚扰场强\[dB（μV／m）]＝测量仪读数\[dB（μV）]十天线系数（dB）＋电缆损耗（dB）     
   每部天线都有天线系数，该系数与频率有关，曲线一般由天线制造商给出。电磁骚扰测量中常用的天线为宽带天线，便于自动化扫频测量。一般用双锥天线（30～300MHz）和对数周期天线（200～1000MHz），最近又推出把二种天线合二为一的宽带天线（30～1000MHz）。在测量1GHz以上的频率时常用喇叭天线，喇叭天线具有很强的方向性。有时EMI测量也用对称振子天线，其长度应该等于被测频率的半波长，由于改变测量频率时需同时改变振子长度，所以这种天线不适合进行自动化扫频测量。以上这些天线的形状见图4。        
-  ![tx](./material/tx.PNG "图4  EMI测量用的天线")           
+  ![tx](./material/tx.png "图4  EMI测量用的天线")           
   1GHz～18GHz频率段的辐射发射测试一般使用全电波暗室，现以工科医（ISM）设备为例说明。由于试验场地是自由空间，只有直达波，没有反射波，所以接收天线可以设置在与EUT同一高度上，不必上下移动。但是转台仍需360度转动，以获得最大值。测试距离为3米。天线应采用小口径定向天线，水平和垂直二种状态都要测试。测量采用频谱分析仪，因为工科医（ISM）设备在运行期间工作频率可能会有明显变化，所以采用全景分析比较适宜。频谱分析仪应设在最大保持方式和对数dB显示方式。测量结果用电场强度的峰值或平均值表示（不用准峰值）。峰值测量时采用1MHz的分辨率带宽和视频带宽，平均值测量时仍采用1MHz的分辨率带宽，但是视频带宽应大大缩小至10Hz，相当于加入一个低通滤波器。     
   辐射发射测试时,测量天线接收到的骚扰强场包括两个部分,一部分是EUT内部的导线和电路直接通过机箱壳体的缝隙向外的辐射,称壳体辐射，另一部分是由外接电缆引出的共模电流辐射。替代法测试的目的是仅仅测试EUT的壳体辐射,所以要求拆除所有可以拆卸的电缆,不能拆卸的电缆上要加铁氧体磁环,并放在不会影响测量结果的位置上。     
   图7所示为替代法测试的方法和布置。首先用半波振子天线A和测量接收机测量出EUT的最大骚扰值，然后用半波振子天线B替代EUT。调节信号发生器输出功率，直至测量接收机达到同样的值。记录替代天线B的输入端功率，即为EUT的壳体辐射功率。     
-  ![td](./material/td.PNG "图7  辐射发射的替代法测试")    
+  ![td](./material/td.jpg "图7  辐射发射的替代法测试")    
   由于采用替代法，所以对试验场地的要求比较宽松,只要求替代天线B在各方向上移动±10cm，测量值变化不超过±1.5dB既可。合格的开阔场地、半波暗室和全电波暗室都符合上述要求，都可以进行替代法测试。     
   测试天线A的高度h应和EUT中心的高度相同，只要求h>1m，测试天线A也不需上下移动。但要求EUT在常规放置位置和90o翻转位置上分别旋转翻360o，以便寻找EUT的最大骚扰值。     
   测试距离d虽然没有明确要求，但最好还应符合远场条件。d的起始点为EUT的几何中心，终止点为测量天线A的天线中心。替代试验和校准试验时，替代天线B应置于EUT 的几何中心。    
