--- a/5.曲线坐标系.md
+++ b/5.曲线坐标系.md
@@ -62,7 +62,7 @@
 ![e3](./materials/e3.gif)      
 它的反函数    
 ![e4](./materials/e4.gif)    
-假定也单值连续可微，则x<sub>α<sub>(α=1,2,3)可以代替X<sub>i</sub>(i=1,2,3)作为Ω中点的坐标，称为曲线坐标。     
+假定也单值连续可微，则x<sub>α</sub>(α=1,2,3)可以代替X<sub>i</sub>(i=1,2,3)作为Ω中点的坐标，称为曲线坐标。     
   - 球坐标    
   ![e5](./materials/e5.PNG)     
   式中，0≤x<sub>1</sub>≤2π，0≤x<sub>2</sub>≤π。反过来     
