--- a/5.曲线坐标系.md
+++ b/5.曲线坐标系.md
@@ -28,7 +28,7 @@
   ![1](./materials/qwfcf.png)    
   - 微分到底是什么？
     - 微分本质是一个微小的线性变化量，是用一个线性函数作为原函数变化的逼近（或者叫近似）。微分的定义是从导数而来的，由导数定义有      
-	![daoshu](./materials/ojld/daoshu.gif)    
+	![daoshu](./materials/daoshu.gif)    
 	那么则有     
 	![jixian](./materials/jixian.gif)          
 	则可以得到如下结果：    
